# DO_URL_SHORTERNER_API

./: .coverage  .env  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
URL_Shortener_API/: .env.example  alembic.ini  pyproject.toml
URL_Shortener_API/.github/workflows/: ci.yml
URL_Shortener_API/app/: database.py  main.py  redis_client.py
URL_Shortener_API/app/api/: deps.py
URL_Shortener_API/app/core/: alias.py  security.py
URL_Shortener_API/app/models/: __init__.py  click.py
URL_Shortener_API/app/repositories/: token_repo.py
URL_Shortener_API/app/schemas/: user.py
URL_Shortener_API/app/services/: auth_service.py  link_service.py
URL_Shortener_API/app/tasks/: click_tasks.py
URL_Shortener_API/docs/: architecture.md
URL_Shortener_API/tests/integration/: test_analytics.py  test_redirect.py  test_tokens.py  test_users.py
alembic/: env.py
app/: config.py  logger.py  main.py
app/core/: exceptions.py
app/middleware/: request_id.py
app/models/: link.py  refresh_token.py  user.py
app/repositories/: click_repo.py  link_repo.py  user_repo.py
app/schemas/: link.py
app/services/: analytics_service.py  user_service.py
app/tasks/: celery_app.py
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md
tests/: conftest.py
tests/integration/: test_links.py
tests/unit/: test_click_tasks.py  test_deps.py  test_exceptions.py  test_middleware.py  test_repositories.py  test_security.py  test_services.py
url_shortener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+7 files in other folders)
